# teachingAssistant

./: README.md  app.py  pyproject.toml
utils/: stt.py  translation.py  tts.py
